gen/file/v1/generator-errors.log
    Blocking waiting for file lock on build directory
    Checking google-file1 v0.1.0 (/Users/sthiel/dev/google-apis/generated/gen/file/v1/lib)
error[E0423]: expected value, found struct `locations::LocationsActions`
    --> gen/file/v1/lib/src/lib.rs:1046:13
     |
1046 |             locations::LocationsActions
     |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `locations::LocationsActions { /* fields */ }`?

error[E0423]: expected value, found struct `instances::InstancesActions`
    --> gen/file/v1/lib/src/lib.rs:1099:17
     |
1099 |                 instances::InstancesActions
     |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `instances::InstancesActions { /* fields */ }`?

error[E0423]: expected value, found struct `operations::OperationsActions`
    --> gen/file/v1/lib/src/lib.rs:1103:17
     |
1103 |                 operations::OperationsActions
     |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ did you mean `operations::OperationsActions { /* fields */ }`?

warning: unreachable expression
   --> gen/file/v1/lib/src/lib.rs:778:13
    |
778 | /             Ok(match value {
779 | |                 _ => {
780 | |                     return Err(::serde::de::Error::custom(format!(
781 | |                         "invalid enum for #name: {}",
...   |
784 | |                 }
785 | |             })
    | |______________^
    |
    = note: #[warn(unreachable_code)] on by default

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0423`.
error: Could not compile `google-file1`.

To learn more, run the command again with --verbose.
